--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
     "seed:songs": "node src/seeds/songs.js",
     "seed:albums": "node src/seeds/albums.js"
   },
@@ -18,10 +19,12 @@
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "mongoose": "^8.16.1",
-    "socket.io": "^4.8.1"
+    "node-cron": "^4.2.1",
+    "socket.io": "^4.8.1",
+    "spotify-clone": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
