--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -25,7 +25,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
+    "erasableSyntaxOnly": false, //true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
